# api/controllers/user.js
@@ -1,24 +1,32 @@
-var db = require('../helpers/db')
+var db    = require('../helpers/db')
 
 module.exports = { getAllUsers, getUserByID }
 
 function getAllUsers(req, res) {
-    console.log('db: getting all users')
-
     db.findAllUsers(function(err, result) {
-        if (err) return res.json(err.message)
+        if (err) return res.status(400).json(err.message)
 
         res.json(result)
     })
+
+    console.log('db: getting all users')
 }
 
 function getUserByID(req, res) {
-    console.log('get user by id (' + id + ')')
-
-    var id = req.swagger.params.id.value
-
-    db.findUserByID(id, function(err, result) {
-        if (err) return res.json(err.message)
-        res.json(result)
+    var token = req.swagger.params.auth.value
+    require('../helpers/token').verify(token, function(isVerified) {
+        if (isVerified) {
+            var id = req.swagger.params.id.value
+            db.findUserByID(id, function(err, result) {
+                if (err) return res.status(400).json(err.message)
+                res.json(result)
+            })
+        } else {
+            res.status(400).json({message: "unauthorized token"})
+        }
     })
+}
+
+function getMyProfile(req, res) {
+
 }
